# aktov

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  Makefile  README.md  context.md  docker-compose.yml  pyproject.toml
.claude/hooks/: capture-tool-call.sh  capture-tool-failure.sh
.claude/skills/write-wl/: SKILL.md
.github/workflows/: ci.yml  publish.yml
cloud/: Dockerfile  alembic.ini  pyproject.toml
cloud/alembic/: env.py
cloud/alembic/versions/: a559bd8b46c8_initial_schema.py
cloud/src/aktov_cloud/: __init__.py  config.py  database.py  main.py
cloud/src/aktov_cloud/api/: __init__.py  agents.py  alerts.py  deps.py  rules.py  traces.py
cloud/src/aktov_cloud/detection/: __init__.py  dedup.py  engine.py  yaml_bridge.py
cloud/src/aktov_cloud/models/: __init__.py  agent.py  alert.py  api_key.py  audit_log.py  base.py  detection_rule.py  notification_channel.py  org_config.py  organization.py  trace.py  usage.py
cloud/src/aktov_cloud/scripts/: seed_dev.py
cloud/src/aktov_cloud/webhooks/: __init__.py  sender.py
cloud/src/chainwatch_cloud/: __init__.py  config.py  database.py  main.py
cloud/src/chainwatch_cloud/api/: __init__.py  agents.py  alerts.py  deps.py  rules.py  traces.py
cloud/src/chainwatch_cloud/detection/: __init__.py  dedup.py  engine.py  yaml_bridge.py
cloud/src/chainwatch_cloud/models/: __init__.py  agent.py  alert.py  api_key.py  audit_log.py  base.py  detection_rule.py  notification_channel.py  org_config.py  organization.py  trace.py  usage.py
cloud/src/chainwatch_cloud/scripts/: seed_dev.py
cloud/src/chainwatch_cloud/webhooks/: __init__.py  sender.py
cloud/tests/: conftest.py  test_alerts.py  test_traces.py
labs/: langchain_lab.py  replay_traces.py  sdk_e2e_debug.py  sdk_e2e_safe.py  send_one_trace.py
rules/phase0/: AK-001.yaml  AK-012.yaml  AK-020.yaml  AK-022.yaml  AK-023.yaml  AK-030.yaml  AK-032.yaml  AK-041.yaml  AK-050.yaml  CW-001.yaml  CW-007.yaml  CW-010.yaml  CW-012.yaml  CW-020.yaml  CW-022.yaml  CW-023.yaml  CW-030.yaml  CW-031.yaml  CW-032.yaml  CW-041.yaml  CW-050.yaml
sdk/: README.md  pyproject.toml
sdk/src/aktov/: __init__.py  canonicalization.py  client.py  schema.py
sdk/src/aktov/cli/: main.py
sdk/src/aktov/hooks/: __init__.py  openclaw.py
sdk/src/aktov/integrations/: __init__.py  langchain.py  mcp.py  openai.py  openai_agents.py
sdk/src/aktov/rules/: dsl.py  validator.py
sdk/src/aktov/rules/samples/: AK-010.yaml
sdk/src/chainwatch/: __init__.py  canonicalization.py
sdk/src/chainwatch/cli/: main.py
sdk/src/chainwatch/rules/: dsl.py
sdk/tests/: test_canonicalization.py  test_client.py  test_integrations.py  test_resilience.py  test_rules_validator.py  test_schema.py  test_sdk_e2e_extraction.py
src/aktov/: __init__.py  alerting.py  canonicalization.py  client.py  schema.py  semantic_flags.py
src/aktov/cli/: __init__.py  main.py  rules_cmd.py
src/aktov/hooks/: __main__.py  claude_code.py  openclaw.py
src/aktov/integrations/: __init__.py  anthropic.py  langchain.py  mcp.py  openai.py  openai_agents.py
src/aktov/rules/: __init__.py  dsl.py  engine.py  exclusions.py
src/aktov/rules/samples/: AK-007.yaml  AK-031.yaml
src/chainwatch/: client.py  schema.py  semantic_flags.py
src/chainwatch/cli/: __init__.py
src/chainwatch/integrations/: __init__.py  anthropic.py  langchain.py  mcp.py  openai.py
src/chainwatch/rules/: __init__.py  engine.py
tests/: conftest.py  test_alerting.py  test_canonicalization.py  test_cli_rules.py  test_client.py  test_engine_equivalence.py  test_exclusions.py  test_hook_openclaw.py  test_integrations.py  test_resilience.py  test_schema.py  test_sdk_e2e_extraction.py  test_semantic_flags.py
tests/fixtures/traces/: burst_failures.json  capability_escalation.json  exfiltration_pattern.json  safe_mode_normal.json
