[project]
name = "aktov-workspace"
version = "0.0.0"
description = "Workspace root for Aktov monorepo"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["sdk", "cloud"]

[tool.uv.sources]
aktov = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["sdk/tests", "cloud/tests", "tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
