[project]
name = "aktov"
version = "0.3.5"
description = "Detection engineering for AI agents. Alerts when agents do weird or risky things."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["ai", "agents", "security", "detection", "observability", "langchain", "openai", "mcp", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
agents = ["openai-agents>=0.1"]
openclaw = ["watchdog>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
aktov = "aktov.cli.main:main"

[project.urls]
Homepage = "https://aktov.io"
Repository = "https://github.com/sharmaharjeet92/aktov"
Documentation = "https://aktov.io/docs"
Issues = "https://github.com/sharmaharjeet92/aktov/issues"
Changelog = "https://github.com/sharmaharjeet92/aktov/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aktov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
